scrap fishing notifications, add cooldown tracker

--- a/src/main/resources/assets/scify/lang/en_ca.json
+++ b/src/main/resources/assets/scify/lang/en_ca.json
@@ -3,9 +3,9 @@
   "scify.menu.disabled": " (Disabled)",
   "scify.menu.title": "SciFy Menu, eh?",
   "scify.menu.health.title": "Custom Health",
-  "scify.menu.health.description": "Custom health bar.",
-  "scify.menu.fish.title": "Fishing Notifications",
-  "scify.menu.fish.description": "Fishing Notifications",
+  "scify.menu.health.description": "Custom health bar displayed in the top left of the screen.",
+  "scify.menu.cooldown.title": "Cooldown Popup",
+  "scify.menu.cooldown.description": "Shows a small cooldown timer in the bottom left.",
   "scify.menu.welcome.title": "Auto Welcome",
   "scify.menu.welcome.description": "Automatically sends \"wb\" when a player joins.",
   "scify.menu.watermark.title": "Show Watermark",
