MILESTONE: implement config saving

--- a/src/main/resources/assets/scify/lang/en_gb.json
+++ b/src/main/resources/assets/scify/lang/en_gb.json
@@ -1,7 +1,7 @@
 {
   "scify.menu.enabled": " (Enabled)",
   "scify.menu.disabled": " (Disabled)",
-  "scify.menu.title": "SciFy Menu",
+  "scify.menu.title": "SciFy Menu, innit mate?",
   "scify.menu.health.title": "Custom Health",
   "scify.menu.health.description": "Custom health bar displayed in the top left of the screen.",
   "scify.menu.cooldown.title": "Cooldown Popup",
